Add updateOrderStatus and Fix some bugs
